feat: merge opal labs repository
