# php/openapi.yml
@@ -9,6 +9,10 @@ info:
     <br/><br/>
     For a more detailed description please refer to: https://gitlab.com/opalmedapps/opalAdmin<br />"
   version: 1.0.0
+  contact:
+    name: Opal API Support
+    url: https://opalmedapps.ca
+    email: john.kildea@mcgill.ca
 
 tags:
   - name: appointment
@@ -1063,4 +1067,195 @@ paths:
                     type: string
                     example: "Invalid request parameters. Please check your input."
 
+  /opalAdmin/labs/processLabForPatient.php:
+    post:
+      tags:
+        - institution integration
+      summary: Process an individual lab result
+      description: "Processes an individual lab result for a patient"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                labOrders:
+                  description: "Bundled HL7v2 Lab group object"
+                  type: array
+                  minItems: 1
+                  items:
+                    type: object
+                    properties:
+                      collectedDatetime:
+                        description: "Datetime of collection of the sample from the patient"
+                        type: string
+                        pattern: '^\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}$'
+                      labId:
+                        description: "Unique identifier for this lab group"
+                        type: string
+                      testComponents:
+                        description: "Array of lab components within the lab group"
+                        type: array
+                        minItems: 1
+                        items:
+                          type: object
+                          properties:
+                            abnormalFlag:
+                              description: "Flag for abnormality of this component result"
+                              type: string
+                              nullable: true
+                            maxRange:
+                              description: "Maximum normal result value for this component"
+                              type: string
+                            minRange:
+                              description: "Minimum normal result value for this component"
+                              type: string
+                            resultDatetime:
+                              description: "Datetime of component result entry to the lab system"
+                              type: string
+                              pattern: '^\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}$'
+                            testCode:
+                              description: "HL7v2 identifier code for this component"
+                              type: string
+                            testCodeDescription:
+                              description: "HL7v2 identifier description for this component"
+                              type: string
+                            testValue:
+                              description: "Result value"
+                              type: string
+                            unitDescription:
+                              description: "Result units"
+                              type: string
+                          required:
+                            - abnormalFlag
+                            - maxRange
+                            - minRange
+                            - resultDatetime
+                            - testCode
+                            - testCodeDescription
+                            - testValue
+                            - unitDescription
+                      testGroupCode:
+                        description: "HL7v2 identifier code for this group"
+                        type: string
+                      testGroupDescription:
+                        description: "HL7v2 identifier description for this group"
+                        type: string
+                    required:
+                      - collectedDatetime
+                      - labId
+                      - testComponents
+                      - testGroupCode
+                      - testGroupDescription
+                mrn:
+                  description: "Patient hospital card MRN"
+                  type: string
+                site:
+                  description: "Patient hospital card site"
+                  type: string
+              required:
+                - labOrders
+                - mrn
+                - site
 
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "success"
+        '400':
+          description: Invalid Parameters
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "error"
+                  reason:
+                    type: string
+                    example: "Parameter SpecimenDateTime is an invalid date, please provide a date with the right format."
+
+  /opalAdmin/labs/test-results-patient.php:
+    post:
+      tags:
+        - institution integration
+      summary: Fetch and process historical test results for a patient
+      description: | 
+        **Optional Integration Endpoint**
+        
+        Fetches historical lab results for an Opal patient given an MRN and site. 
+        Optionally takes fromDate, toDate. Requires opal-labs to be configured with access to a VSign SOAP Webservice.
+      
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - PatientId
+                - Site
+              type: object
+              properties:
+                PatientId:
+                  type: string
+                  description: PatientId
+                Site:
+                  type: string
+                  description: Hospital Site
+                fromDate:
+                  type: string
+                  description: Start date for range. If omitted the default is the registration date minus one year for the patient.
+                  example: '2017-05-20 00:00:00'
+                  default: 'registrationDate - 1 year'
+                toDate:
+                  type: string
+                  description: End date for the range. If omitted the results is the current date of the request.
+                  example: '2020-05-20 00:00:00'
+                  default: 'now'
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "success"
+                  results:
+                    $ref: '#/components/schemas/test-result-patient'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "error"
+                  reason:
+                    type: string
+                    example: "Empty OASIS Test Results."
+        '500':
+          description: Server Error
+
+components:
+  schemas:
+    test-result-patient:
+      type: object
+      description: Process Test Result Patient Success
+      example: {"insertedRows": 0, "updatedRows": 10}
+    test-result-patient-error:
+      type: object
+      description: Process Test Result Patient Success
+      example: {"status": "error", "reason": "Empty OASIS Test Results."}
